--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 header {
     background-color: #2e323f;
     padding: 1em 0;
-    /* to center the logo */
+    /* to center the logo in mobile view*/
     /* text-align: center; */
 }
 
@@ -144,6 +144,7 @@ section,
     transition: 0.175s ease;
     bottom: 0;
     /* bottom has to be set to 0 for the transition to work */
+    /* better simpler way in btn__hero for the same effect */
 }
 .nav__item:hover,
 .nav__item:focus {
@@ -197,8 +198,7 @@ section,
 .hero__btn:hover,
 .hero__btn:focus {
     opacity: 0.5;
-    position: relative;
-    bottom: 3px;
+    transform: translateY(-3px);
 }
 
 .second-section {
